2022-11-20T16:27:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3508815903 # 633
* notice: last 14d: unq all: 10 22
* notice: prev accum: outdated-unq outdated-all / unq all: 154 619 / 165 642
* notice: next accum: outdated-unq outdated-all / unq all: 155 620 / 165 642
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-06] / []

2022-11-17T01:54:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3484679154 # 622
* notice: last 14d: unq all: 11 23
* notice: prev accum: outdated-unq outdated-all / unq all: 154 619 / 164 639
* notice: next accum: outdated-unq outdated-all / unq all: 154 619 / 165 642
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +9 -0 -0 / 2 9
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-16T16:28:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3481201301 # 621
* notice: last 14d: unq all: 10 20
* notice: prev accum: outdated-unq outdated-all / unq all: 153 617 / 164 637
* notice: next accum: outdated-unq outdated-all / unq all: 154 619 / 164 639
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2022-11-02] / [2022-11-16]

2022-11-16T08:28:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3477635146 # 620
* notice: last 14d: unq all: 11 20
* notice: prev accum: outdated-unq outdated-all / unq all: 153 617 / 163 633
* notice: next accum: outdated-unq outdated-all / unq all: 153 617 / 164 637
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-16T01:51:28Z: