@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-20T16:27:12Z",
-  "count_outdated" : 620,
-  "uniques_outdated" : 155,
+  "timestamp" : "2022-11-22T08:28:35Z",
+  "count_outdated" : 623,
+  "uniques_outdated" : 157,
   "count" : 642,
   "uniques" : 165,
   "views" : [
-    {
-      "timestamp": "2022-11-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-11-11T00:00:00Z",
       "count": 7,
