@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 10,
+  "count": 19,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2022-11-08T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-11-11T00:00:00Z",
       "count": 7,
