@@ -1,3 +1,11 @@
+2022-11-22T08:28:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3521627080 # 638
+* notice: last 14d: unq all: 8 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 155 620 / 165 642
+* notice: next accum: outdated-unq outdated-all / unq all: 157 623 / 165 642
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-08] / []
+
 2022-11-20T16:27:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3508815903 # 633
 * notice: last 14d: unq all: 10 22
